--- a/src/scss/top-menu.scss
+++ b/src/scss/top-menu.scss
@@ -20,10 +20,10 @@ header#app-header {
     .pure-button {
         background: inherit;
         color: inherit;
-    }
 
-    .pure-button:hover {
-        background: $dark-accent;
+        &:hover {
+            background: $dark-accent;
+        }
     }
 }
 
@@ -41,15 +41,12 @@ div#toolbar {
         .toolbar-label {
             color: $light-accent;
             font-size: 0.8em;
-        }
-
-        .toolbar-label:hover {
             cursor: default;
         }
-    }
 
-    div.toolbar-section:last-child {
-        border-right: none;
+        &:last-child {
+            border-right: none;
+        }
     }
 }
 
@@ -57,7 +54,6 @@ div#toolbar {
 div#toolbar.toolbar-collapsed > .pure-menu > .pure-menu-list {
     @extend %flex-row;
     flex-wrap: wrap;
-
     /** || Subsection Headings */
     .toolbar-collapsed-section h3 {
         @extend %flex-row;
@@ -71,17 +67,17 @@ div#toolbar.toolbar-collapsed > .pure-menu > .pure-menu-list {
 
         button {
             padding-right: 0;
-        }
 
-        button::after {
-            content: "";
-            margin-left: 1em;
-            border-right: 1px solid transparentize($light-accent, 0.25);
-        }
+            &::after {
+                content: "";
+                margin-left: 1em;
+                border-right: 1px solid transparentize($light-accent, 0.25);
+            }
 
-        button:hover::after {
-            border: none;
-            border-right: 1px solid $dark-accent;
+            &:hover::after {
+                border: none;
+                border-right: 1px solid $dark-accent;
+            }
         }
     }
 }
