Changed CSS Editor <input> CSS

--- a/src/scss/css-editor.scss
+++ b/src/scss/css-editor.scss
@@ -71,6 +71,11 @@ section.css-category {
 
         text-align: right;
     }
+
+    input {
+        padding: $light-spacing;
+    }
+
     /** || Highlighting Button */
     button.hl {
         background: inherit;
