--- a/src/scss/css-editor.scss
+++ b/src/scss/css-editor.scss
@@ -168,7 +168,15 @@ section.css-category-1 {
     border-color: transparentize($light-accent, 0.5);
     border-style: solid;
     border-width: 0;
+    pointer-events: none;
+
+    &.resume-hl-box-selected-node {
+        background: transparentize(darken($light-shade, 0.25), 0.9);
+        border-width: 2px;
+        border-style: solid;
+    }
 }
+
 /** || Popovers */
 .pseudo-options {
     @extend %flex-row;
