--- a/src/scss/css-editor.scss
+++ b/src/scss/css-editor.scss
@@ -174,6 +174,7 @@ section.css-category-1 {
         background: transparentize(darken($light-shade, 0.25), 0.9);
         border-width: 2px;
         border-style: solid;
+        box-sizing: border-box;
     }
 }
 
