--- a/src/scss/zindex.scss
+++ b/src/scss/zindex.scss
@@ -39,11 +39,6 @@ $main-pane-z: $default-z + 1;
         z-index: $main-pane-z;
     }
 
-    .resume-hl-box {
-        background: transparentize($dark-accent, 0.75);
-        z-index: $main-pane-z + 1;
-    }
-
     .react-contextmenu { 
         // Make context menu appear over sidebar
         &, * {
@@ -57,6 +52,12 @@ $main-pane-z: $default-z + 1;
     &, * {
         z-index: $default-z;
     }
+}
+
+/* || Highlight Boxes */
+.resume-hl-box {
+    background: transparentize($dark-accent, 0.75);
+    z-index: $main-pane-z + 1;
 }
 
 /** || Context Menu */
